# echo_descriptor

./: .gitignore  DOCS.md  README.md  pyproject.toml  requirements.txt
config/parameters/: pettersen_detroit.yaml
config/reports/: paragraphs.yaml  reports.yaml  templates.yaml
config/web/: parameters_ui.yaml
docs/: CONFIGURATION_SYSTEM.md  DOCS.md
echo_desc/: __init__.py  __main__.py  core_math.py  model.py  zscore_calc.py
echo_desc/config/: __init__.py  io.py
echo_desc/config_defaults/reports/: templates.yaml  templates_v2.yaml
echo_desc/config_defaults/web/: parameters_ui.yaml
echo_desc/parameters/: __init__.py  base.py  registry_pettersen_detroit.py
echo_desc/reports/: __init__.py  backend.py  report_templates.py  templating.py
echo_desc/web/: __init__.py  templates_store.py  webapp.py
echo_desc/web/static/: app.css  app.js  settings_ui.js  tabs.js  templates_ui.js  tpl_model.js  tpl_render.js
echo_desc/web/templates/: index.html  result.html
scripts/: sync_config_defaults.py
