[project]
name = "echo_descriptor"
version = "0.1.0"
description = "Auto desciptor generator for ECHO procedure with Z-score calculation"
authors = [
    {name = "wojzwo", email = "wojzwo22@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
]

[project.scripts]
echo_desc = "echo_desc.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["echo_desc"]
